GeneWeb version 3.12
--------------------
GeneWeb version 3.11
--------------------

* Languages
  - [04 Feb 01] Added more declinations for dates (to make Estonian work
    better)
  - [31 Jan 01] Added Estonian (Hanno Kuus)

* GeneWeb server or CGI (gwd)
  - [01 Feb 01] In descendants display, added the occupation.
  - [30 Jan 01] Added a way to be able to print trees which are too
    wide for printers. In tree displaying, a link is proposed in the upper
    right corner of the page. When clicking on it, a page is proposed for
    a parametrizable display of the tree by slices.
  - [29 Jan 01] For GeneWeb sites accomodating many data bases: to
    avoid the creation of too many files in the same directories, added
    the ability to put them in sub-sub-directories. A data base file can
    be installed in a sub-directory of its first character,
    sub-sub-directory of its second character. For example, a file
    associated with the data base foo can be in the directory f/o/. This
    is not required, but optional, and is therefore backward
    compatible. This applies to:
      * the database directory: f/o/foo.gwb
      * the database configuration file: f/o/foo.gwf
      * the associated images directory: images/f/o/foo
      * the associated extra images directory: src/images/f/o/foo
      * the associated source texts directory: src/f/o/foo/*.txt
      * the header: lang/f/o/foo.hed or lang/xx/f/o/foo.hed
      * the trailer: lang/f/o/foo.trl or lang/xx/f/o/foo.trl
      * the personal page template: etc/f/o/foo/perso.txt
  - [26 Jan 01] Under Windows, added option "-noproc" asking not to run a
    new process at each request. This option was added because some users
    under Windows reported that sometimes, the service gwd blocks after some
    requests and need to be stopped and restarted. This option may resolve
    this problem (not sure).
  - [25 Jan 01] When searching somebody by a name, if there are several