@@ -1,5 +1,10 @@
 GeneWeb version 3.12
 --------------------
+
+* GeneWeb server or CGI (gwd)
+  - [10 Feb 01] For the perso.txt template file, added the macros
+    %father_age_at_birth; and %mother_age_at_birth;
+
 GeneWeb version 3.11
 --------------------
 
